infra/k8s-prod/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
  namespace: puzzle-app
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: registry.purplebear.io/prpo-puzzle-app-auth
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 2
            successThreshold: 1
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 100m

      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  namespace: puzzle-app
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 9000
