infra/k8s-prod/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  namespace: puzzle-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: registry.purplebear.io/prpo-puzzle-app-client
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
  namespace: puzzle-app
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 80
