infra/k8s-prod/processing-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processing-depl
  namespace: puzzle-app
spec:
  selector:
    matchLabels:
      app: processing
  template:
    metadata:
      labels:
        app: processing
    spec:
      containers:
        - name: processing
          image: registry.purplebear.io/prpo-puzzle-app-processing
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9002
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: 9002
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 2
            successThreshold: 1
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 100m

      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: processing-srv
  namespace: puzzle-app
spec:
  selector:
    app: processing
  ports:
    - name: processing
      protocol: TCP
      port: 3000
      targetPort: 9002
