infra/k8s-prod/puzzle-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puzzle-depl
  namespace: puzzle-app
spec:
  selector:
    matchLabels:
      app: puzzle
  template:
    metadata:
      labels:
        app: puzzle
    spec:
      containers:
        - name: puzzle
          image: registry.purplebear.io/prpo-puzzle-app-puzzle
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9001
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: 9001
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 2
            successThreshold: 1
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 100m

      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: puzzle-srv
  namespace: puzzle-app
spec:
  selector:
    app: puzzle
  ports:
    - name: puzzle
      protocol: TCP
      port: 3000
      targetPort: 9001
