infra/k8s-prod/sync-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sync-depl
  namespace: puzzle-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sync
  template:
    metadata:
      labels:
        app: sync
    spec:
      containers:
        - name: sync
          image: registry.purplebear.io/prpo-puzzle-app-sync
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9003
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /livez
              port: 9003
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 2
            successThreshold: 1
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 100m

      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: sync-srv
  namespace: puzzle-app
spec:
  selector:
    app: sync
  ports:
    - name: sync
      protocol: TCP
      port: 3000
      targetPort: 9003
